--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thêm mô tả ngắn gọn về trang web của bạn.">
+    <meta name="description" content="Umino...">
     <title>Umino</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet" async>
     <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -44,7 +44,7 @@
       <div class="" id="header-menu">
         <div class="navbar">
           <div class="logo">
-            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: 20px;"></a>
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: auto; object-fit: cover;"></a>
           </div>
 
           <div class="menu">
@@ -649,7 +649,7 @@
       <div>
         <div class="footer-logo">
           <div class="logo">
-            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: 20px;"></a>
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: auto; object-fit: cover;"></a>
           </div>
           <p>268 St, South New York/NY 98944, United States</p>
           <p>+222-1800-2628</p>
@@ -725,13 +725,13 @@
           <p>© 2022 Umino Store. All Rights Reserved.</p>
         </div>
         <div class="payment">
-          <div><img src="uploads/footer/bg22.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg23.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg24.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg25.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg26.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg27.WebP" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg28.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg22.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg23.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg24.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg25.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg26.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg27.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
+          <div><img src="uploads/footer/bg28.WebP" style="width: 100%; height: auto; object-fit: cover;" alt=""></div>
         </div>
       </div>
     </footer>
