--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Umino...">
     <title>Umino</title>
-    <link rel="stylesheet" href="style.css" async>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet" async>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
