--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Umino...">
     <title>Umino</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" async>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet" async>
     <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -434,19 +434,19 @@
 
       <div class="banner">
         <div class="banner-left">
-          <img src="uploads/banner/bg9.WebP" alt="">
+          <img class="banner-img" src="uploads/banner/bg9.WebP" alt="">
           <p>Set Nightwear</p>
           <p>Explore the Lookbook</p>
           <div class="banner-left-line"></div>
         </div>
         <div class="banner-center">
-          <img src="uploads/banner/bg10.WebP" alt="">
+          <img class="banner-img" src="uploads/banner/bg10.WebP" alt="">
           <p>Handbag Style</p>
           <p>Explore the Lookbook</p>
           <div class="banner-center-line"></div>
         </div>
         <div class="banner-right">
-          <img src="uploads/banner/bg11.WebP" alt="">
+          <img class="banner-img" src="uploads/banner/bg11.WebP" alt="">
           <p>Made for Your</p>
           <p>Explore the Lookbook</p>
           <div class="banner-right-line"></div>
