--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Umino...">
     <title>Umino</title>
-    <link rel="stylesheet" href="style.css" async>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet" async>
-    <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous" async></script>
   </head>
   <body>
     <header>
@@ -736,6 +736,6 @@
       </div>
     </footer>
 
-    <script src="home.js"></script>
+    <script src="home.js" async></script>
   </body>
 </html>
