--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Umino</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous" async></script>
+    <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -736,6 +736,6 @@
       </div>
     </footer>
 
-    <script src="home.js" async></script>
+    <script src="home.js"></script>
   </body>
 </html>
