--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 <div class="menu-user">
                   <a href="#" aria-label="Điều hướng đến trang chính">Sale</a>
                   <a href="#" aria-label="Điều hướng đến trang chính">Buy Umino!</a>
-                  <a href="#" aria-label="Điều hướng đến trang chính"><i class="fa-regular fa-clock" style="padding-right: 8px;"></i></i>Recently Viewed</a>
-                  <a href="#" aria-label="Điều hướng đến trang chính"><i class="fa-regular fa-heart" style="padding-right: 8px;"></i></i>Wishlist</a>
+                  <a href="#" aria-label="Điều hướng đến trang chính"><i class="fa-regular fa-clock" style="padding-right: 8px;"></i>Recently Viewed</a>
+                  <a href="#" aria-label="Điều hướng đến trang chính"><i class="fa-regular fa-heart" style="padding-right: 8px;"></i>Wishlist</a>
                   <a href="#" aria-label="Điều hướng đến trang chính"><i class="fa-regular fa-user" style="padding-right: 8px;"></i>Login / Register</a>
                 </div>
                 
