--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@ Here’s some of our most popular products people are in love with.
 <div class=sale>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -367,11 +367,11 @@ Here’s some of our most popular products people are in love with.
 <div>Pre-Order</div>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -403,11 +403,11 @@ Here’s some of our most popular products people are in love with.
 <div class=sale>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -436,11 +436,11 @@ Here’s some of our most popular products people are in love with.
 <div class=sale>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -508,11 +508,11 @@ Here’s some of our most popular products people are in love with.
 <div>Sold Out</div>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -541,11 +541,11 @@ Here’s some of our most popular products people are in love with.
 <div class=sale>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -579,11 +579,11 @@ Here’s some of our most popular products people are in love with.
 <div>Pre-Order</div>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
@@ -612,11 +612,11 @@ Here’s some of our most popular products people are in love with.
 <div class=sale>
 </div>
 <div class=add-cart>
-<button>Add to cart</button>
+<button aria-label="Thêm vào giỏ hàng">Add to cart</button>
 </div>
 <div class=btn-heart>
-<button><i class="fa-regular fa-heart"></i></button>
-<button><i class="fa-regular fa-eye"></i></button>
+<button aria-label="Thêm vào danh sách yêu thích"><i class="fa-regular fa-heart"></i></button>
+<button aria-label="Xem"><i class="fa-regular fa-eye"></i></button>
 </div>
 </div>
 <div class=products-title>
