--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Top Trending
 </div>
 </div>
 <div class="mySlides fade">
-<img loading=lazy src=uploads/slider/slide.webp alt="">
+<img loading=lazy priority=high src=uploads/slider/slide.webp alt="">
 <div class=text>
 <h1 class=text-lines>
 Stylish <br>
@@ -251,7 +251,7 @@ Top Trending
 </div>
 </div>
 <div class="mySlides fade">
-<img loading=lazy src=uploads/slider/slide.webp alt="">
+<img loading=lazy priority=high src=uploads/slider/slide.webp alt="">
 <div class=text>
 <h1 class=text-lines>
 Stylish <br>
